syntax ="proto3";

package user;

option go_package = "./pb/userpb";

service UserService{
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}

message RegisterUserRequest{
    string username = 1;
    string password = 2;
}

message RegisterUserResponse{
    string message = 1;
}

message LoginUserRequest{
    string username = 1;
    string password = 2;
}

message LoginUserResponse{
    string token = 1;
}

